tests/base/parser/bad/lib/lmodule-library-cid-with.scillib
scilla_version 0

library TestLib

(* Should be 'type' *)

Type House =
| Kind of String
